--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
 		<title>A web page that points a browser to a different page after 2 seconds</title>
-		<meta http-equiv="refresh" content="2; URL=NA225/_build/index.html">
+		<meta http-equiv="refresh" content="2; URL=https://<user.name>.github.io/<repo.name>/NA225/_build/index.html">
 		<meta name="keywords" content="automatic redirection">
 	</head>
 	
 	<body>
 		If your browser doesn't automatically go there within a few seconds, 
 		you may want to go to 
-		<a href="NA225/_build/index.html">the destination</a> 
+		<a href="https://<user.name>.github.io/<repo.name>/NA225/_build/index.html">the destination</a> 
 		manually.
 	</body>
 </html>
